# Visual-Mercutio

./: .gitmodules  README.md
Documents/: Guide d'Installation Conceptor V06.doc  Guide d'Installation MVI-INS-0708.doc  Instructions pour support V03.doc
Installer/: VisualMercutio.iss
Models/Ref BPER/: ZLocal.ini
Models/Ref Demo Mercutio/: RH.klf  ZLocal.ini
Models/Ref Exemple 2007/: ZLocal.ini
Models/Ref à copier et renommer au nom de votre projet/: ZLocal.ini
Monitor/: README.md
Monitor/Capsules/: CapsulesTravail.sln
Monitor/Databases/: Mercutio2.sql  pilotage.sql  simulation.sql  workflow.sql
Monitor/Documentation/: Monitor.chm  Monitor.hhc  Monitor.hhp
Monitor/Indicators/: EFF2.xls  EQU2.xls  EQU3.xls  PRE1.xls  PRO1.XLS  PRO2.xls
Monitor/MessagesSOAP/: MessagesSOAP.java  MessagesSOAP.wsdl  MessagesSOAP.xsd  compile_msgSOAP_13.bat  configMessagesSOAP.ini  deploy_msgSOAP.bat  documentation.txt  myDeploy.bat  test10.xml
Monitor/Messenger/: url_pub.txt
Monitor/Prerequisites/: MySql.Data.msi  mysql-connector-odbc-3.51.12-win32.msi
Monitor/Team editor/: Processsoft.sln
Prototype/Visual Mercutio Advanced/: Visual Mercutio Advanced.sln
Third party/EasySoap++-0.6.1/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.borland  TODO  buildconf.sh  configure.in  easysoap.dxy  easysoap.spec  update_libs.sh  update_server.sh
Third party/EasySoap++-0.6.1/conftools/: ac_cxx_namespaces.m4  ac_cxx_partial_specialization.m4  ac_cxx_template_keyword_qualifier.m4  peti_with_dmalloc.m4
Third party/EasySoap++-0.6.1/google/: Makefile.am  README.txt  google.cpp  google.h  google_xs.h  main.cpp  vssver.scc
Third party/EasySoap++-0.6.1/include/: Makefile.am
Third party/EasySoap++-0.6.1/include/easysoap/: .cvsignore  Makefile.am  SOAP.h  SOAPArray.h  SOAPBase64.h  SOAPBody.h  SOAPCGIServer.h  SOAPCGITransport.h  SOAPDebugger.h  SOAPDispatchHandler.h  SOAPEnvelope.h  SOAPException.h  SOAPFault.h  SOAPHTTPServer.h  SOAPHashMap.h  SOAPHeader.h  SOAPISAPIServer.h  SOAPMethod.h  SOAPNamespaces.h  SOAPParameter.h  SOAPParse.h  SOAPParseEventHandler.h  SOAPPool.h  SOAPProxy.h  SOAPQName.h  SOAPResponse.h  SOAPSSLContext.h  SOAPSTL.h  SOAPServer.h  SOAPServerDispatch.h  SOAPSocket.h  SOAPStack.h  SOAPString.h  SOAPTransport.h  SOAPTypeTraits.h  SOAPUrl.h  SOAPUtil.h  SOAPWinInetTransport.h  SOAPonHTTP.h  XMLComposer.h  (+8 more)
Third party/EasySoap++-0.6.1/proj/win32/: Makefile.am
Third party/EasySoap++-0.6.1/proj/win32/BCB5/: Makefile.am  easysoap.bpf  easysoap.bpg  easysoap.bpr  easysoap.mak  interopclient.bpf  interopclient.bpr  interopclient.mak  interopserver.bpf  interopserver.bpr  interopserver.mak  makefile.mak  setup.bat  simpleclient.bpf  simpleclient.bpr  simpleclient.mak  simpleisapi.bpf  simpleisapi.bpr  simpleisapi.mak  simpleserver.bpf  simpleserver.bpr  simpleserver.mak  validator.bpf  validator.bpr  validator.mak
Third party/EasySoap++-0.6.1/proj/win32/MSVC6/: Makefile.am  easysoap.dsp  easysoap.dsw  interopclient.dsp  interopserver.dsp  simpleclient.dsp  simpleisapi.dsp  simpleserver.dsp  validator.dsp
Third party/EasySoap++-0.6.1/proj/win32/MSVC7/: .cvsignore  Makefile.am  easysoap.ncb  easysoap.sln  easysoap.sln.old  easysoap.vcproj  easysoap.vcproj.old  easysoap.vcproj.vspscc  google.sln  google.vcproj  google.vcproj.old  interopclient.vcproj  interopclient.vcproj.old  interopserver.vcproj  interopserver.vcproj.old  mssccprj.scc  simpleclient.vcproj  simpleclient.vcproj.old  simpleisapi.vcproj  simpleisapi.vcproj.old  simpleserver.vcproj  simpleserver.vcproj.old  validator.vcproj  validator.vcproj.old  vssver.scc
Third party/EasySoap++-0.6.1/simpleserver/: .cvsignore  Makefile.am  README.TXT  simpleisapi.cpp  vssver.scc
Third party/EasySoap++-0.6.1/src/: .cvsignore  Makefile.am  SOAPBase64.cpp  SOAPBody.cpp  SOAPBodyHandler.cpp  SOAPBodyHandler.h  SOAPCGIServer.cpp  SOAPCGITransport.cpp  SOAPClientSocketImp.cpp  SOAPClientSocketImp.h  SOAPDebugger.cpp  SOAPEnvelope.cpp  SOAPEnvelopeHandler.cpp  SOAPEnvelopeHandler.h  SOAPFault.cpp  SOAPHTTPServer.cpp  SOAPHeader.cpp  SOAPHeaderHandler.cpp  SOAPHeaderHandler.h  SOAPISAPIServer.cpp  SOAPMethod.cpp  SOAPMethodHandler.cpp  SOAPMethodHandler.h  SOAPNamespaces.cpp  SOAPParameter.cpp  SOAPParameterHandler.cpp  SOAPParameterHandler.h  SOAPParse.cpp  SOAPProxy.cpp  SOAPResponse.cpp  SOAPSSLContext.cpp  SOAPSecureSocketImp.cpp  SOAPSecureSocketImp.h  SOAPServerDispatch.cpp  SOAPSocket.cpp  SOAPStructHandler.cpp  SOAPStructHandler.h  SOAPTypeTraits.cpp  SOAPUrl.cpp  SOAPWinInetTransport.cpp  (+7 more)
Third party/EasySoap++-0.6.1/src/abyss/src/: Makefile.am  abyss.h  conf.c  conn.c  data.c  file.c  http.c  server.c  socket.c  thread.c  threadpool.cpp  threadpool.h
Third party/EasySoap++-0.6.1/tests/: .cvsignore  Makefile.am  README.SSL  README.TXT  SOAPBuildersHeaderHandler.cpp  SOAPBuildersHeaderHandler.h  SOAPBuildersInteropHandler.cpp  SOAPBuildersInteropHandler.h  SOAPBuildersInteropHandlerA.cpp  SOAPBuildersInteropHandlerB.cpp  SSLClient.cpp  SSLServer.cpp  interop2a.xsl  interop2b.xsl  interop2c.xsl  interopclient.cpp  interopserver.cpp  interopstruct.h  run_tests.sh  vssver.scc
Third party/EasySoap++-0.6.1/validator/: .cvsignore  Makefile.am  README.TXT  UserlandValidatorHandler.cpp  UserlandValidatorHandler.h  WhichToolkitHandler.cpp  WhichToolkitHandler.h  validator.cpp  vssver.scc
Tools/ReportsTool/: ReportsTool.sln
Tools/Visual Mercutio Reports manager/: Visual Mercutio Reports Manager.sln
Visual Mercutio/: README.md  VisualMercutio.sln
Visual Mercutio/Include/: Define.h  Include.vcproj  Include.vcxproj  Message.h  PSS_Constants.h  PSS_Defines.h  PSS_ExternalBoxFunctions.h  PSS_Interfaces.h  PSS_LanguageDefs.h  PSS_Macros.h  PSS_Messages.h  PSS_ModelResIDs.h  PSS_PropIDs.h  PSS_RegistryDefs.h  PSS_ResIDs.h  PSS_SrvMsgs.h  PSS_ZEvent.h  RegistryDef.h  STBOX.H  TOOLBARX.H  ZACONST.H  ZEvent.h  ZSrvMess.h  mfc.h  planfin.hdf  zLanguageDef.h  zMacros.h  zPropertyIds.h  zRBProp.h  zRMdlBP.h
Visual Mercutio/ZBaseLib/: ANILOAD.CPP  ANILOAD.H  AppOpt.cpp  AppOpt.h  BASEFRM.CPP  BASEFRM.H  (+698 more)
(+6525 files in other folders)
