SUBDIRS = include src proj tests validator simpleserver google
EXTRA_DIST = \
	README \
	README.borland \
	easysoap.spec \
	conftools/config.guess \
	conftools/config.sub \
	conftools/install-sh \
	conftools/missing \
	conftools/mkinstalldirs \
	conftools/ltmain.sh

AM_CFLAGS=-Wall
AM_CXXFLAGS=-Wall
