easysoapdir = $(prefix)/include/easysoap
easysoap_HEADERS = \
    SOAP.h \
    SOAPArray.h \
    SOAPBase64.h \
    SOAPBody.h \
    SOAPCGIServer.h \
    SOAPCGITransport.h \
    SOAPDebugger.h \
    SOAPDispatchHandler.h \
    SOAPEnvelope.h \
    SOAPException.h \
    SOAPFault.h \
    SOAPHashMap.h \
    SOAPHeader.h \
    SOAPMethod.h \
    SOAPNamespaces.h \
    SOAPParameter.h \
    SOAPParseEventHandler.h \
    SOAPParse.h \
    SOAPPool.h \
    SOAPProxy.h \
    SOAPQName.h \
    SOAPResponse.h \
    SOAPSTL.h \
    SOAPServer.h \
    SOAPServerDispatch.h \
    SOAPSocket.h \
    SOAPStack.h \
    SOAPString.h \
	SOAPSSLContext.h \
    SOAPTypeTraits.h \
    SOAPTransport.h \
    SOAPUrl.h \
    SOAPUtil.h \
    SOAPonHTTP.h \
    XMLComposer.h \
    XMLParser.h \
    es_comp.h \
    es_config.h \
    es_conf.h \
    es_borl.h \
    es_msvc.h \
    es_mwerks.h 

EXTRA_DIST = \
	SOAPWinInetTransport.h \
	SOAPHTTPServer.h \
	SOAPISAPIServer.h

