EXTRA_DIST = \
	easysoap.bpf \
	easysoap.bpg \
	easysoap.bpr \
	easysoap.mak \
	interopclient.bpf \
	interopclient.bpr \
	interopclient.mak \
	interopserver.bpf \
	interopserver.bpr \
	interopserver.mak \
	makefile.mak \
	setup.bat \
	simpleclient.bpf \
	simpleclient.bpr \
	simpleclient.mak \
	simpleisapi.bpf \
	simpleisapi.bpr \
	simpleisapi.mak \
	simpleserver.bpf \
	simpleserver.bpr \
	simpleserver.mak \
	validator.bpf \
	validator.bpr \
	validator.mak
